Fixed bug that you couldn't scroll on mobile caused by Jquery UI's css file, made use of F-A's CDN rather than having it local.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "font-awesome.min.css";
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css";
 @import "https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css";
 /*Stylesheet for the Quest Logger application.
 ** QuestLogger is created by Rafael De Jongh, Inias Van Ingelgom, Evelyne Vas Esbroeck and Nico Bosmans.
@@ -240,6 +240,9 @@ input[type=submit] {
     -moz-transition:all .2s ease;
     -o-transition:all .2s ease;
     transition:all .2s ease;
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
 }
 input[type=submit]:hover {background-color:#45a049}
 #todolist{max-height:625px;overflow:auto}
@@ -613,6 +616,7 @@ progress[aria-valuenow]:before {background:#25b695}
     }
     #todolist{max-height:100%}
     .maximize, .minimize, .ui-resizable-handle,time#clock,#clockSwitch{display:none!important;}
+	.ui-draggable-handle {-ms-touch-action:initial!important;touch-action:initial!important}
 }
 @media screen and (max-width:635px){
     #markall{
